[package]
name = "pomotime"
version = "0.1.0"
edition = "2021"
description = "A zero dependency(except for the Rust standard library) Pomodoro timer for terminals."
readme = "README.md"
keywords = ["console", "terminal", "pomodoro", "timer"]
license-file = "LICENSE"
repository = "https://github.com/charliemonnone/pomo"
exclude = [
    "pomo.gif",
]
[dependencies]
